--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			
 		<script>
 			
-				alert('该网站可能过于辣眼睛，确定继续访问吗？')
+//				alert('该网站可能过于辣眼睛，确定继续访问吗？')
 			
 				$('header').load('content/header.html')
 				
